# japanese_translation_assistant

./: .gitmodules  README.md  ja_helper.py  pyproject.toml  test.py
