[tool.poetry]
name = "japanese_translation_assistant"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
JapaneseVerbConjugator = "^1.0.1"
SudachiPy = "^0.4.3"
sudachidict-core = {url = "https://object-storage.tyo2.conoha.io/v1/nc_2520839e1f9641b08211a5c85243124a/sudachi/SudachiDict_core-20200330.tar.gz"}
romkan = "^0.2.1"
jaconv = "^0.2.4"
googletrans = {git = "https://github.com/ssut/py-googletrans.git"}
requests = "^2.23.0"
jamdict = "^0.1a6"
mecab-python3 = "^0.996.5"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
