[tool.poetry]
name = "japanese_translation_assistant"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
JapaneseVerbConjugator = "^1.0.1"
romkan = "^0.2.1"
jaconv = "^0.2.4"
requests = "^2.23.0"
jamdict = "^0.1a6"
mecab-python3 = "^0.996.5"
SudachiDict-core = "^20200330"
SudachiPy = "^0.4.9"
sudachidict_full = "^20200722"
fugashi = {extras = ["unidic-lite"], version = "^1.0.5"}
google_trans_new = "^1.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
